--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
         </p>
         <ul class="footer__list">
           <li class="footer__list__item">
-            <a href="#" class="footer__list__link">
+            <a href="https://github.com/henriqueAffonsoRios/Marks-of-the-Curse-Movie" class="footer__list__link">
               <img src="./dist/images/logos/github.png" alt="github">
             </a>
           </li>
           <li class="footer__list__item">
-            <a href="#" class="footer__list__link">
+            <a href="https://www.linkedin.com/in/henriqueaffonsoluzrios/" class="footer__list__link">
               <img src="./dist/images/logos/linkedin.png" alt="linkedin">
             </a>
           </li>
